[gd_scene load_steps=2 format=3 uid="uid://v5ews1ioygl2"]

[ext_resource type="Script" path="res://Assets/Scene/GUI/CardElementConfirmation/CardElementConfirmation.gd" id="1_fhr8a"]

[node name="CardElementConfirmation" type="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_fhr8a")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "@str::default_card_name"
clip_text = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ListRequirements" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ButtonConfirm" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "@str::card_element_confirmation"
clip_text = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonConfirm" to="." method="_on_button_confirm_pressed"]
